# cdekhelpbot

./: .env.example  .gitignore  README.md  alembic.ini  backup.sql  docker-compose.dev.yaml  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
api/handlers/: get_user.py  user_info.py
api/routers/: users.py
app/: Dockerfile  main.py
app/core/: config.py
app/db/: __init__.py  base.py
app/schemas/: admins.py  auth.py  customers.py  invoice.py  jwt_storage.py  users.py
backups/: Dockerfile  backup.sh
bot/: Dockerfile  bot.py  main.py
bot/handlers/: __init__.py  authorization.py  command_start.py  invoice.py
bot/keyboards/: admin.py  backbuttons.py  basic.py  customer.py  settings.py
bot/middlewares/: logging_middleware.py  work_hours_middleware.py
bot/states/: admin.py  admin_auth.py  auth.py  contractor.py  customer.py  customer_auth.py  invoice.py  merch.py  send_invoice.py  state_map.py
bot/utils/: bot_utils.py  delete_messages.py  exceptions.py  fetch_user.py  invoice.py  middlewares.py  state.py  storage.py  validate.py
core/: config.py
db/: base.py
db/models/: invoices.py  users.py
migrations/: Dockerfile  env.py
migrations/versions/: 2025_06_23_1708-0c5d18e95870_first_migration.py  2025_06_27_2104-6662f6f81d3b_second_table.py  2025_06_27_2253-8fc49eb74416_improve_relationships.py  2025_07_03_1550-5743e69aa869_normalize_phone_numbers.py  2025_07_03_1600-9a6e6f502db6_normalize_phone_numberss.py  2025_07_03_1651-939fe2236e36_relationship_between_users_and_.py  2025_07_03_1706-199de2663f68_15.py  (+20 more)
tests/: conftest.py
(+98 files in other folders)
